# Arena_Boss

./: .gitignore  Arena_Boss.sln  CMakeLists.txt  CMakeSettings.json  Entity.h  README.md  Scene.cpp  Scene.h  SceneManager.h
Arena_Boss/: Accessor.h  Arena_Boss.cpp  Arena_Boss.rc  Arena_Boss.vcxproj  Arena_Boss.vcxproj.filters  Color.h  Common.h  ConfigFile.cpp  ConfigFile.h  D3D.cpp  D3D.h  FileSystem.cpp  FileSystem.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  InputSystem.cpp  InputSystem.h  MathFunctions.cpp  MathFunctions.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Random.h  Resource.h  Rotator.cpp  Rotator.h  Scalar.h  Util.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  WindowManager.cpp  (+5 more)
Asset/: Arena.json  Test.mesh
CMake/: Util.cmake
Config/: Config.txt
Shader/: Phong.frag  Phong.vert  Sprite.frag  Sprite.vert
Source/: Accessor.h  Color.h  Component.h  ComponentManager.cpp  ComponentManager.h  ConfigFile.h  DrawableComponent.cpp  DrawableComponent.h  Entity.cpp  Entity.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  IteratorFinder.h  JsomHelper.cpp  JsonHelper.h  Log.h  Main.cpp  MathFunctions.cpp  MathFunctions.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  Mesh.cpp  Mesh.h  MeshComponent.cpp  MeshComponent.h  Quaternion.h  Random.cpp  Random.h  RenderManager.cpp  RenderManager.h  RenderTree.cpp  RenderTree.h  Resource.h  ResourceManager.cpp  ResourceManager.h  Rotator.cpp  (+24 more)
Source/Core/: Accessor.h  ConfigFile.cpp  ConfigFile.h  Log.h
(+9 files in other folders)
